fixed spacing

--- a/client/src/react-components/TypeGame/TypeGame.css
+++ b/client/src/react-components/TypeGame/TypeGame.css
@@ -17,7 +17,7 @@
     padding: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -32rem;
+    margin-top: -33.5rem;
     top: 10vh;
     left: 35vw;
     width: 30vw;
